[project]
name = "warden-mcp"
version = "0.1.0"
description = "Drop-in MCP security middleware: audit · policy · human-approval · injection defense"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Always Ready Allies LLC" }]
keywords = ["mcp", "ai-agents", "security", "audit", "prompt-injection", "guardrails"]
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
warden = "warden.__main__:main"

[project.optional-dependencies]
telegram = ["httpx>=0.27"]
# OAuth 2.1 Resource-Server auth for the HTTP transport (RFC 9728 / RFC 8707 / JWKS validation).
# Optional so the core stdio proxy runs with zero crypto deps; forward-secure audit sealing needs none.
auth = ["pyjwt[crypto]>=2.8", "httpx>=0.27"]
# HTTP transport — a deployable MCP gateway (streamable-HTTP) served by uvicorn.
http = ["starlette>=0.37", "uvicorn>=0.30"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["warden"]
